--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					</ul>
 				</nav>
 			</header>
-			<h2>Demo Portfolio Website</p>		
+			<h2>How was this made?</h2>		
 			<p>Watch the  <a href="https://frontendmasters.com/courses/portfolio-website/" target="_blank">Web Development Project: Personal Portfolio Website</a>, course on <a href="https://frontendmasters.com/" target="_blank">Frontend Masters</a> if you'd like to learn how this was built.</p>
 		</div>
 	</section>
